# instawow_zygor

./: .gitignore  pyproject.toml
instawow_zygor/: archive.py  archives.py  config.py  entrypoint.py  mediafire.py  resolver.py  zygor.py
