[build-system]
requires = ["flit-core >=3.8.0"]
build-backend = "flit_core.buildapi"

[project]
name = "instawow_zygor"
version = "0.1.0"
description = "Zygor Guides from Mediafire for instawow"
entry-points."instawow.plugins" = { instawow_zygor = "instawow_zygor.entrypoint" }
dependencies = [
    "instawow (>=4.8.0,<5.0.0)",
    "rarfile (>=4.2.0,<5.0.0)",
    "curl-cffi (>=0.9.0,<1.0.0)",
    "click (>=8.1.8,<9.0.0)"
]