[build-system]
requires = ["flit-core >=3.8.0"]
build-backend = "flit_core.buildapi"

[project]
name = "instawow_zygor"
version = "0.2.2"
description = "Zygor Guides from Mediafire for instawow"
requires-python = ">=3.12, <4.0.0"
entry-points."instawow.plugins" = { instawow_zygor = "instawow_zygor.entrypoint" }
dependencies = [
    "instawow (>=6.1.0,<7.0.0)",
    "curl-cffi (>=0.11.1,<1.0.0)",
    "click (>=8.2.0,<9.0.0)"
]